# dopewars

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.md  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  config-cmake.h.in  config.h.in  configure  configure.ac  configure.in  cygwin.am  dopewars.desktop  dopewars.spec  dopewars.spec.in  runindent.sh
.github/workflows/: build.yml  codeql-analysis.yml
auxbuild/: README-release
cmake_modules/: FindDL.cmake
doc/: .cvsignore  Makefile.am  Makefile.in  aiplayer.html  clientplay.html  commandline.html  configfile.html  contribute.html  credits.html  developer.html  dopewars.6  dopewars.6.in  example-cfg  example-igneous  i18n.html  index.html  installation.html  metaserver.html  protocol.html  server.html  servercommands.html  windows.html
doc/help/: Makefile.am  cops.html  drugs.html  general.html  guns.html  locations.html  server.html  sounds.html
intl/: Makefile  Makefile.in
m4/: dp_expand_dir.m4  glib-2.0.m4  glib-gettext.m4  glib.m4  gtk-2.0.m4  gtk.m4  iconv.m4  libtool.m4
po/: .cvsignore  ChangeLog  Makefile.in.in  Makevars  POTFILES.in  cat-id-tbl.c  check-cformat.sh  de.gmo  de.po  dopewars.pot  en_GB.po  es.po  es_ES.po  fr.po  fr_CA.po  nn.po  pl.po  pt_BR.po
rpm/: dopewars.spec.in
sounds/: Makefile.am
sounds/19.5degs/: Makefile.am  README
src/: .cvsignore  AIPlayer.c  AIPlayer.h  Makefile.am  Makefile.in  admin.c  admin.h  configfile.c  configfile.h  convert.c  convert.h  curses_client.c  curses_client.h  dopeid.h  dopeos.c  dopeos.h  dopewars-pill.xpm  dopewars.c  dopewars.h  dopewars.manifest  dopewars.rc  error.c  error.h  fakelibtool.sh  gtk.c  gtk.h  gtk_client.c  gtk_client.h  gtkport.c  gtkport.h  log.c  log.h  mac_helpers.h  mac_helpers.m  magic  message.c  message.h  network.c  network.h  nls.h  (+14 more)
src/curses_client/: CMakeLists.txt  Makefile.am  Makefile.in  curses_client.c  curses_client.h
src/cursesport/: CMakeLists.txt  Makefile.am  Makefile.in  cursesport.c  cursesport.h
src/gtkport/: CMakeLists.txt  Makefile.am  Makefile.in  clist.c  clist.h  gtkenums.h  gtkport.c  gtkport.h  gtktypes.h  itemfactory.c  itemfactory.h  treeview.c  treeview.h  unicodewrap.c  unicodewrap.h
src/gui_client/: CMakeLists.txt  Makefile.am  Makefile.in  gtk_client.c  gtk_client.h  newgamedia.c  newgamedia.h  optdialog.c  optdialog.h
src/plugins/: CMakeLists.txt  Makefile.am  sound_cocoa.m  sound_esd.c  sound_esd.h  sound_sdl.c  sound_sdl.h  sound_winmm.c  sound_winmm.h
win32/: Makefile  README  README.md  contid.h  dialogs.c  dialogs.rc  filelist  guifunc.c  guifunc.h  install.c  install.nsi.in  install.rc  makeinstall.c  setup.c  setup.manifest  setup.rc  uninstall.c  uninstall.manifest  uninstall.rc  util.c  util.h
win32/bzlib/: Makefile.nocygwin  README.bzlib
win32/mingw/: Dockerfile
win32/zlib/: Makefile.nocygwin  README.zlib
